--- a/i3/config
+++ b/i3/config
@@ -25,6 +25,8 @@ exec --no-startup-id dex --autostart --environment i3
 # Disable Monitor Sleep
 exec --no-startup-id xset s off -dpms
 
+# Set the desktop background
+exec_always --no-startup-id feh --bg-scale /opt/dwkiosk/background.png
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
