--- a/i3/config
+++ b/i3/config
@@ -40,6 +40,7 @@ exec_always --no-startup-id feh --bg-scale /opt/dwkiosk/background.png
 exec --no-startup-id nm-applet
 
 # DW KIOSK
+for_window [class="Digital Watchdog DW Spectrum Client"] floating enable
 exec --no-startup-id dwspectrum
 
 #workspace 2
